--- a/content/post/springboot/策略模式.md
+++ b/content/post/springboot/策略模式.md
@@ -2,7 +2,7 @@
 title: "策略模式"
 date: 2020-12-22T09:47:03+08:00
 lastmod: 2020-12-22T09:47:03+08:00
-draft: true
+draft: false
 keywords: ["策略模式","springboot"]
 description: "springboot 策略模式的实现"
 tags: ["springboot","设计模式"]
